[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pingx"
version = "1.0.2"
description = "Full-screen TUI ping monitor with auto-reconnect and WAN failover detection"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thomas Boyle", email = "4200802+tom-xyz@users.noreply.github.com" }]
keywords = ["ping", "network", "tui", "terminal", "monitor", "latency", "failover"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = ["rich>=13.0.0"]

[project.scripts]
pingx = "pingx:main"

[project.urls]
Homepage = "https://github.com/Tom-xyz/pingx"
Repository = "https://github.com/Tom-xyz/pingx"
Issues = "https://github.com/Tom-xyz/pingx/issues"

[tool.setuptools]
py-modules = ["pingx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
